--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react": "^18",
     "react-chartjs-2": "^5.2.0",
     "react-dom": "^18",
+    "react-github-calendar": "^4.1.3",
     "recharts": "^2.12.2",
     "use-debounce": "^10.0.0"
   },
